--- a/Udajahaja/udajahaja/src/app/components/header/header.component.html
+++ b/Udajahaja/udajahaja/src/app/components/header/header.component.html
@@ -3,7 +3,16 @@
     <a [routerLink]="['']">
     <div class="name" >UDAJAHAJA</div>
     </a>
-    <div class="logo">LOGO</div>
+    <div class="logo"></div>
+    <div class="flag"></div>
+    <div class="menuContainer">
+        <ul>
+            <li class="menu">Book Flights</li>
+            <li class="menu">Manage Booking</li>
+            <li class="menu">Booking History</li>
+            
+        </ul>
+    </div>
     
 
 
