--- a/Udajahaja/udajahaja/src/app/components/admin-header/admin-header.component.scss
+++ b/Udajahaja/udajahaja/src/app/components/admin-header/admin-header.component.scss
@@ -56,6 +56,15 @@
     height: 50px;
     right: 10%;
 }
+.logoutButton{
+    width: 150px;
+    height: 50px;
+    background-color:white;
+    position: relative;
+    margin-top: 1px;
+    
+    
+}
 .menuContainer{
 
     position: absolute;
