--- a/Udajahaja/udajahaja/src/app/components/admin-home-page/admin-home-page.component.scss
+++ b/Udajahaja/udajahaja/src/app/components/admin-home-page/admin-home-page.component.scss
@@ -4,13 +4,14 @@
     width: 100%;
     height: 11%;
     margin: 10px;
-    background-color: #3B579D;
+    background-color: #3B579D; 
 }
 
 
 .bodyContent{
-    background-color: yellowgreen;
-    border: 1px solid black;
+    background-color: rgb(255, 255, 255);
+    resize: both;
+  overflow: auto;
     position: absolute;
     bottom: 0px;
     width: 80%;
@@ -20,21 +21,13 @@
    
 }
 .footer{
-    position: absolute;
+    position:fixed;
     bottom: 0px;
     width: 100%;
     height: 2%;
     border: 1px solid black;
 }
-.logoutButton{
-    width: 150px;
-    height: 50px;
-    background-color:white;
-    position: relative;
-    margin-top: 1px;
-    
-    
-}
+
 
 .button{
     display: inline-block;
@@ -52,48 +45,32 @@
     font-size: 35px;
     font-style: italic;
     font-family: 'Times New Roman', Times, serif;
+    
 }
-.airlinesHeaderContainer{
-    background-color: white;
+
+
+.newAirline{
+    position: absolute;
+    right: 10%;
+    margin: 5px;
+    padding: 5px;
+    height: 50px;
+    width: 200px;
+    top: 4%;
+}
+.airlineHeaderContainer{
+   
+    position: relative;
+    width: 100%;
+    height: 70px;
+    text-align: center;
+}
+.airlineDataContainer{
+    border: 1px solid black;
+    border-radius: 20px;
+    position: relative;
     width: 95%;
-    height: 45px;
-}
-.serialNo{
+    height: 70px;
     text-align: center;
-    position: relative;
-    font-size: 25px;
-    font: bold;
-    height: 100%;width: 12%;background-color: aqua;display: inline-block;border-right: 1px solid black;
-}
-.logo{
-    text-align: center;
-    position: relative;
-    font-size: 25px;
-    font: bold;
-    height: 100%;width: 20%;background-color: aqua;display: inline-block;
-    border-right: 1px solid black
-}
-.airlineName{
-    text-align: center;
-    position: relative;
-    font-size: 25px;
-    font: bold;
-    height: 100%;width: 32%;background-color: aqua;display: inline-block;
-    border-right: 1px solid black
-}
-.status{
-    text-align: center;
-    position: relative;
-    font-size: 25px;
-    font: bold;
-    height: 100%;width: 15%;background-color: aqua;display: inline-block;
-    border-right: 1px solid black
-}
-.airlineView{
-    text-align: center;
-    position: relative;
-    font-size: 25px;
-    font: bold;
-    height: 100%;width: 20%;background-color: aqua;display: inline-block;
-    border-right: 1px solid black
+    
 }
