--- a/Udajahaja/udajahaja/src/app/components/home-page/home-page.component.scss
+++ b/Udajahaja/udajahaja/src/app/components/home-page/home-page.component.scss
@@ -21,7 +21,6 @@
     bottom: 0px;
     width: 100%;
     height: 2%;
-    border: 1px solid black;
 }
 .search{
     background-color: rgb(226, 226, 226);
@@ -107,7 +106,7 @@ font-family: Arial, Helvetica, sans-serif;
 }
 .offerContainer{
     border: .5px solid black;
-   // background-image: url('../../images/airport.jpg')  ;
+  //  background-image: url('../../images/udajahaja.jpg')  ;
    // background-position: center;
    // background-size: 1020px;
    background-color: rgb(198, 222, 248);
