--- a/Udajahaja/udajahaja/src/app/components/add-airline/add-airline.component.scss
+++ b/Udajahaja/udajahaja/src/app/components/add-airline/add-airline.component.scss
@@ -42,12 +42,13 @@
     max-height: fit-content;
     
 }
-.airLineName{
+.airLineNamediv{
   
+    background-color: grey;
     position: relative;
     
     height: 40px;
-    width: 60%;
+    width: 100%;
     left: 15%;
     font-size: 30px;
 }
