--- a/Udajahaja/udajahaja/src/app/components/admin-home-page/admin-home-page.component.html
+++ b/Udajahaja/udajahaja/src/app/components/admin-home-page/admin-home-page.component.html
@@ -33,7 +33,7 @@
         <div style="display: inline-block;margin: 5px;padding: 5px;width: 15%;font-size: 25px;height: 50px;width: 200px;max-width: 190px;max-height: 50px;color: black;">
             {{airline.contactNumber}}
         </div>
-        <div style="display: inline-block;margin: 5px;padding: 5px;width: 15%;font-size: 25px; height: 50px;width: 200px;max-width: 190px;max-height: 50px;color: black;">
+        <div style="display: inline-block;margin: 5px;padding: 5px;width: 15%;font-size: 25px; height: 50px;width: 200px;max-width: 190px;max-height: 50px;color: black; word-wrap: break-word;">
             {{airline.contactAddress}}
         </div>
         <div style="display: inline-block;margin: 5px;padding: 5px;width: 15%;font-size: 25px; height: 50px;width: 200px;max-width: 190px;max-height: 50px;color: black;">
