--- a/Udajahaja/udajahaja/src/app/app.component.html
+++ b/Udajahaja/udajahaja/src/app/app.component.html
@@ -1,4 +1,7 @@
 
-<router-outlet></router-outlet>
+
+<router-outlet>
+<div *ngIf="showLoadingIndicator" class="loadinggif">Loading</div>
+</router-outlet>
 
 
