--- a/Udajahaja/udajahaja/src/app/components/edit-airlines/edit-airlines.component.html
+++ b/Udajahaja/udajahaja/src/app/components/edit-airlines/edit-airlines.component.html
@@ -46,12 +46,11 @@
        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
        <div style="display: inline-block;right: 0%;">
-        <button style="width: 100px;height: 50px;background-color: cornflowerblue;color: white;">Edit Airline</button>
+        <button (click)="editAirline()" style="width: 100px;height: 50px;background-color: cornflowerblue;color: white;">
+            Edit Airline
+        </button>
        </div>
-       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-       <div style="display: inline-block;right: 0%;">
-        <button style="width: 100px;height: 50px;background-color: cornflowerblue;color: white;">Add Aeroplanes</button>
-       </div>
+      
        
        
    </div>
@@ -71,7 +70,6 @@
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         
-                            <button style="width: 70px;height: 35px;background-color: cornflowerblue;color: white;">Edit</button>
                             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             <button style="width: 100px;height: 35px;background-color: cornflowerblue;color: white;">Deactivate</button>
                         </div>
