--- a/Udajahaja/udajahaja/src/app/components/home-page/home-page.component.html
+++ b/Udajahaja/udajahaja/src/app/components/home-page/home-page.component.html
@@ -31,16 +31,18 @@
 </div>
 
 <div class="offerContainer">
-    <div class="offer">
-        Diwali offer
+    <div class="offer1">
+        
     </div>
-    <div class="offer">
-        Diwali offer
+    <div class="offer2">
+        
     </div>
-    <div class="offer">
-        Diwali offer
+    <div class="offer3">
+        
     </div>
 </div>
+
+
 
     
 </div>
