--- a/Udajahaja/udajahaja/src/app/components/home-page/home-page.component.scss
+++ b/Udajahaja/udajahaja/src/app/components/home-page/home-page.component.scss
@@ -123,9 +123,53 @@ font-family: Arial, Helvetica, sans-serif;
     height: 20px;
     position: absolute;
 }
-.offer{
+.offer1{
+    background-color: white;
+    background-image: url("../../images/discount3.jpg");
+    background-repeat: no-repeat;
+    background-position:center;
+    background-size: 100%;
+    display: inline-block;
+    height: 85%;
+    width: 30.3%;
+    position: relative;
+    right: 0px;
+    margin-left: 20px;
+    margin-top: 20px;
+    padding: 5px;
+    left: 1%;
+    text-align: center;
+    
+    
+    
+}
+.offer2{
     background-color: white;
     display: inline-block;
+    background-image: url("../../images/discount3.jpg");
+    background-repeat: no-repeat;
+    background-position:center;
+    background-size: 100%;
+    height: 85%;
+    width: 30.3%;
+    position: relative;
+    right: 0px;
+    margin-left: 20px;
+    margin-top: 20px;
+    padding: 5px;
+    left: 1%;
+    text-align: center;
+    
+    
+    
+}
+.offer3{
+    background-color: white;
+    display: inline-block;
+    background-image: url("../../images/discount3.jpg");
+    background-repeat: no-repeat;
+    background-position:center;
+    background-size: 100%;
     height: 85%;
     width: 30.3%;
     position: relative;
